--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="minimum_width">Minimum Width</string>
+    <string name="max_size">Max Size</string>
+    <string name="process">Process</string>
+    <string name="completed">Completed</string>
+    <string name="compress_format">Compress Format</string>
+    <string name="webp">WEBP</string>
+    <string name="jpeg">JPEG</string>
+    <string name="compress_decrement">Compress Decrement</string>
+    <string name="something_went_wrong">Something went wrong …</string>
 </resources>
